# UT-Morph-Tor-Browser

./: AUTHORS  CMakeLists.txt  ChangeLog  README.md  clickable.yaml
debian/: changelog  control  morph-tor-browser-apparmor.manifest  morph-tor-browser-name-change.sh  morph-tor-browser.install  morph-tor-browser.lintian-overrides  morph-tor-browser.migrations  morph-webapp-container.install  rules
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  (+113 more)
src/Morph/Web/: ItemSelector02.qml  MorphSelectOverrideDialog.qml  MorphWebContext.qml  MorphWebView.qml  UserAgent02.qml  scrollbar-theme.js  select_overrides.js
src/app/: AlertDialog.qml  AllowCustomSchemesDialog.qml  AllowOrBlockDomainDialog.qml  AuthenticationDialog.qml  BeforeUnloadDialog.qml  BrowserPage.qml  BrowserView.qml  BrowserWindow.qml  CMakeLists.txt  CertificateVerificationDialog.qml  ChromeBase.qml  ChromeButton.qml  ChromeController.qml  ChromeStateTracker.qml  ColorSelectDialog.qml  ConfirmDialog.qml  ContentExportDialog.qml  ContentHandler.qml  ContentPickerDialog.qml  ContentShareDialog.qml  CustomUserAgentsPage.qml  CustomizedRadioButton.qml  DomainPermissionsPage.qml  DomainSettingsPage.qml  DownloadDelegate.qml  DownloadsDialog.qml  DownloadsPage.qml  EditCustomUserAgentDialog.qml  ErrorSheet.qml  Favicon.qml  FileExtensionMapper.js  FileUtils.js  FilteredKeyboardModel.qml  GeolocationPermissionRequest.qml  HttpAuthenticationDialog.qml  IconWithColorOverlay.qml  IndeterminateProgressBar.qml  InvalidCertificateErrorSheet.qml  KeyboardRectangle.qml  MediaAccessDialog.qml  (+44 more)
src/app/actions/: Back.qml  Bookmark.qml  BookmarkLink.qml  ClearHistory.qml  Copy.qml  CopyImage.qml  CopyImageLink.qml  CopyLink.qml  Cut.qml  Erase.qml  FindInPage.qml  Forward.qml  GoTo.qml  NewTab.qml  OpenImageInNewTab.qml  OpenLinkInBrowser.qml  OpenLinkInNewBackgroundTab.qml  OpenLinkInNewPrivateWindow.qml  OpenLinkInNewTab.qml  OpenLinkInNewWindow.qml  Paste.qml  (+9 more)
src/app/webbrowser/: AddressBar.qml  BookmarkOptions.qml  BookmarksFoldersView.qml  BookmarksFoldersViewWide.qml  BookmarksModelUtils.js  BookmarksView.qml  BookmarksViewWide.qml  BottomEdgeHandle.qml  Browser.qml  BrowserTab.qml  CMakeLists.txt  Chrome.qml  ContentDownloadDialog.qml  ContextMenuMobile.qml  ContextMenuWide.qml  DraggableUrlDelegateWide.qml  ExpandedHistoryView.qml  Highlight.js  HistorySectionDelegate.qml  HistoryView.qml  HistoryViewWide.qml  HistoryViewWithExpansion.qml  HoveredUrlLabel.qml  ListViewHighlight.qml  NavigationBar.qml  NewPrivateTabView.qml  NewTabView.qml  NewTabViewWide.qml  PreviewManager.qml  SadTab.qml  SearchEngines.qml  SearchSuggestions.qml  SecurityCertificatePopover.qml  SettingsDeviceSelector.qml  SettingsPage.qml  Suggestion.qml  Suggestions.qml  TabChrome.qml  TabComponent.qml  TabItem.qml  (+40 more)
src/app/webbrowser/searchengines/: brave.xml
src/tor/: torrc
(+75 files in other folders)
